--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,27 @@ html {
     min-height: 100%;
 }
 
+.start-title {
+    font-style: italic;
+    font-weight: bold;
+    text-align: center;
+    color: rgb(3, 51, 47);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
+.container-start, #quiz-area {
+    -moz-box-shadow: 0 0 5px #ccc;
+    -webkit-box-shadow: 0 0 5px #ccc;
+    box-shadow: 0 0 5px #ccc;
+}
+
+#quiz-area, #high-scores-list {
+    margin-top: 5rem;
+}
+
+#quiz-area {
+    display: none;
+}
 
 .footer {
     position: absolute;
@@ -14,3 +34,13 @@ html {
     background-color: #f8f9fa;
     text-align: center;
 }
+
+.scores-list {
+    text-align: center;
+}
+
+.display-cor-incor {
+    style: bold;
+    height: 7px;
+}
+
